add more sensors

--- a/hello/templates/db.html
+++ b/hello/templates/db.html
@@ -10,6 +10,12 @@
 
 <img src="/test/sensor1">
 
+<img src="/test/sensor2">
+
+<img src="/test/sensor3">
+
+<img src="/test/sensor4">
+
 
 <table>
 
