--- a/hello/templates/db.html
+++ b/hello/templates/db.html
@@ -8,13 +8,13 @@
 <h2>Data</h2>
 
 
-<img src="/test/sensor1">
+<img src="/lineplot/sensor1">
 
-<img src="/test/sensor2">
+<img src="/lineplot/sensor2">
 
-<img src="/test/sensor3">
+<img src="/lineplot/sensor3">
 
-<img src="/test/sensor4">
+<img src="/lineplot/sensor4">
 
 
 <table>
