--- a/hello/templates/db.html
+++ b/hello/templates/db.html
@@ -7,7 +7,6 @@
 
 <h2>Data</h2>
 
-
 <img src="/lineplot/sensor1">
 
 <img src="/lineplot/sensor2">
@@ -15,6 +14,14 @@
 <img src="/lineplot/sensor3">
 
 <img src="/lineplot/sensor4">
+
+<img src="/histogram/sensor1">
+
+<img src="/histogram/sensor2">
+
+<img src="/histogram/sensor3">
+
+<img src="/histogram/sensor4">
 
 
 <table>
