--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Python Getting Started on Heroku</title>
-  <style type="text/css">
+<title>Sensor data</title>
+<meta charset="UTF-8">
+<style type="text/css">
     td {
-      padding: 4px;
+        padding: 5px;
     }
-  </style>
+    img {
+        float: left;
+    }
+    div {
+        overflow: auto;
+        clear: both;
+    }
+</style>
 </head>
 <body>
 
